# DeepSeek-TUI-Modes

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: phase3-validation-report.md  retrospective.md
prompts/base/: actions.md  base.json  doing-tasks.md  intro.md  session-guidance.md  system.md  tone.md  tools.md
prompts/modifiers/: bold.md  debug.md  director.md  methodical.md  muse.md
scripts/: phase3-explore-v2.sh  phase3-validate.sh  phase3b-validate.sh
src/: api.rs  assemble.rs  config.rs  config_cli.rs  daemon.rs  main.rs  presets.rs  resolve.rs
