[package]
name = "deepseek-tui-modes"
version = "0.1.0"
edition = "2024"
description = "Behavioral mode presets for DeepSeek-TUI — ports claude-code-modes to the DeepSeek-TUI daemon API"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
which = "7"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
